# mm_flowguard

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  create_task_example.c  flowguard_main.c  flowguard_main.h  flowguard_ui.c  flowguard_ui.h  idf_component.yml  index.html  lvgl_ui.c  lvgl_ui.h  mm_flowguard.c  mm_flowguard.h  softap_ota.c  softap_ota.h  ui.c  ui.h  ui_helpers.c
main/screens/: ui_Screen1.c  ui_ScreenFWUpdate.c
